Can select a filepath for the database.

--- a/InterviewGeneratorBlazorHybrid/Components/Layout/MainLayout.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Layout/MainLayout.razor
@@ -1,12 +1,12 @@
 ﻿@inherits LayoutComponentBase
 @using InterviewGeneratorBlazorHybrid.Components.Shared
 
-<div class="page">
+<div class="page d-flex flex-column">
     @* <div class="sidebar">
         <NavMenu />
     </div> *@
 
-    <main>
+    <main class="flex-grow-1 d-flex flex-column">
         <div class="top-row px-4 d-flex justify-content-between align-items-center">
             <span class="navbar-brand mb-0 h1">Interview Generator</span>
             <NavButtons />
@@ -16,6 +16,9 @@
             @Body
         </article>
     </main>
+    <div class="footer-container">
+        <Footer />
+    </div>
 </div>
 
 
