File safety - making sure that there is a real database there - is starting to work. Now it just needs polish.

--- a/InterviewGeneratorBlazorHybrid/Components/Pages/Home.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
 @using InterviewGeneratorBlazorHybrid.ViewModels
+@using InterviewGeneratorBlazorHybrid.Data
+
 @inject InterviewViewModel ViewModel
 @inject NavigationManager Navigation
+@inject AppDbContextFactory ContextFactory
 
 
 <PageTitle>Home</PageTitle>
