Updates for correctly selecting a valid database.

--- a/InterviewGeneratorBlazorHybrid/Components/Layout/MainLayout.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Layout/MainLayout.razor
@@ -17,7 +17,7 @@
         </article>
     </main>
     <div class="footer-container">
-        <Footer />
+        @* <Footer /> *@
     </div>
 </div>
 
