Updated Core Competencies language.

--- a/InterviewGeneratorBlazorHybrid/Components/Pages/Home.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/Home.razor
@@ -19,7 +19,7 @@
         <div class="col d-flex justify-content-center">
             <a class="btn btn-primary btn-square d-flex flex-column align-items-center justify-content-center" href="categories">
                 <span class="bi bi-list-nested-nav-menu mb-2" aria-hidden="true"></span>
-                <b>Categories</b>
+                <b>Core Competencies</b>
             </a>
         </div>
         <div class="col d-flex justify-content-center">
