--- a/InterviewGeneratorBlazorHybrid/Components/Pages/Categories.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/Categories.razor
@@ -5,7 +5,7 @@
 @inject NavigationManager Navigation
 
 
-<h3>Category Listing</h3>
+<h3>Core Competency Listing</h3>
 
 <h3>@(ViewModel.IsEditMode ? "Edit Category" : "Add Category")</h3>
 <div class="mb-3">
