--- a/InterviewGeneratorBlazorHybrid/Components/Shared/NavButtons.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Shared/NavButtons.razor
@@ -33,7 +33,7 @@
             </li>
             <li>
                 <NavLink class="dropdown-item" href="categories">
-                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Categories
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Core Competencies
                 </NavLink>
             </li>
             <li>
