--- a/InterviewGeneratorBlazorHybrid/Components/Shared/NavButtons.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Shared/NavButtons.razor
@@ -5,7 +5,7 @@
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
     </NavLink>
     <NavLink class="btn btn-primary" href="categories">
-        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Categories
+        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Core Competencies
     </NavLink>
     <NavLink class="btn btn-primary" href="questions">
         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Questions
