--- a/InterviewGeneratorBlazorHybrid/Components/Pages/InterviewList.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/InterviewList.razor
@@ -1,5 +1,4 @@
-﻿@page "/interview/list"
-@using InterviewGeneratorBlazorHybrid.ViewModels
+﻿@using InterviewGeneratorBlazorHybrid.ViewModels
 @using InterviewGeneratorBlazorHybrid.Models
 @inject InterviewViewModel ViewModel
 @inject NavigationManager Navigation
