--- a/InterviewGeneratorBlazorHybrid/Components/Shared/NavButtons.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Shared/NavButtons.razor
@@ -10,7 +10,7 @@
     <NavLink class="btn btn-primary" href="questions">
         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Questions
     </NavLink>
-    <NavLink class="btn btn-primary" href="interview/list">
+    <NavLink class="btn btn-primary" href="interview">
         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Interview List
     </NavLink>
     <NavLink class="btn btn-primary" href="settings" aria-label="Interview settings" title="Interview settings">
@@ -42,7 +42,7 @@
                 </NavLink>
             </li>
             <li>
-                <NavLink class="dropdown-item" href="interview/list">
+                <NavLink class="dropdown-item" href="interview">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Interview List
                 </NavLink>
             </li>
