--- a/InterviewGeneratorBlazorHybrid/Components/Pages/Home.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/Home.razor
@@ -23,7 +23,7 @@
             </a>
         </div>
         <div class="col d-flex justify-content-center">
-            <a class="btn btn-primary btn-square d-flex flex-column align-items-center justify-content-center" href="interview/list">
+            <a class="btn btn-primary btn-square d-flex flex-column align-items-center justify-content-center" href="interview">
                 <span class="bi bi-list-nested-nav-menu mb-2" aria-hidden="true"></span>
                 Interview List
             </a>
