--- a/InterviewGeneratorBlazorHybrid/Components/Pages/InterviewList.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/InterviewList.razor
@@ -4,7 +4,8 @@
 @inject NavigationManager Navigation
 
 <h3>Interview Listing</h3>
-
+<p><span class="alert-danger">@ErrorMessage</span></p>
+<p><span class="alert-success">@SuccessMessage</span></p>
 <div class="mb-3">
     <button class="btn btn-success" @onclick="AddNewInterview">
         <i class="bi bi-plus-circle"></i> Add New Interview
@@ -49,6 +50,9 @@ else
                     </td>
                     <td>@interview.Questions.Count</td>
                     <td>
+                        <button class="btn btn-sm btn-primary" @onclick="() => GenerateInterview(interview)">
+                            Save Document
+                        </button>
                         <button class="btn btn-sm btn-info" @onclick="() => EditInterview(interview)">
                              Edit
                         </button>
