Some wording and cosmetic changes. Starting to have a really nice look and feel.

--- a/InterviewGeneratorBlazorHybrid/Components/Layout/MainLayout.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Layout/MainLayout.razor
@@ -8,7 +8,7 @@
 
     <main class="flex-grow-1 d-flex flex-column">
         <div class="top-row px-4 d-flex justify-content-between align-items-center">
-            <span class="navbar-brand mb-0 h1">Interview Generator</span>
+            <span class="navbar-brand mb-0 h1">Core Competency Interview Generator</span>
             <NavButtons />
         </div>
 
