--- a/InterviewGeneratorBlazorHybrid/Components/Pages/QuestionsPage.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/QuestionsPage.razor
@@ -37,7 +37,7 @@ else
     }
     else
     {
-        <h5>Select Core Competency</h5>
+        <h5>Select Core Competency (in dropdown) To See Related Questions</h5>
         <div class="mb-3">
 
             <select id="categorySelect" class="form-select" @onchange="OnCategoryChanged" value="@ViewModel.Category.Id">
