--- a/InterviewGeneratorBlazorHybrid/Components/Pages/SettingsPage.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/SettingsPage.razor
@@ -18,7 +18,7 @@
 <div class="container text-center my-5">
     <div class="d-flex justify-content-between px-5" role="group" aria-label="Database options">
         <button class="btn btn-success flex-fill mx-2" @onclick="AddNewDatabase">Add New Database</button>
-        <button class="btn btn-success flex-fill mx-2" @onclick="SelectDifferentDatabase">Select A Current Database</button>
+        <button class="btn btn-success flex-fill mx-2" @onclick="SelectDifferentDatabase">Select A Database</button>
         <button class="btn btn-success flex-fill mx-2">Create Sample Database</button>
     </div>
 </div>
