--- a/InterviewGeneratorBlazorHybrid/Components/Pages/SettingsPage.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/SettingsPage.razor
@@ -19,7 +19,7 @@
     <div class="d-flex justify-content-between px-5" role="group" aria-label="Database options">
         <button class="btn btn-success flex-fill mx-2" @onclick="AddNewDatabase">Add New Database</button>
         <button class="btn btn-success flex-fill mx-2" @onclick="SelectDifferentDatabase">Select A Database</button>
-        <button class="btn btn-success flex-fill mx-2">Create Sample Database</button>
+        <button class="btn btn-success flex-fill mx-2" @onclick="CreateSampleDatabase">Create Sample Database</button>
     </div>
 </div>
 
