--- a/InterviewGeneratorBlazorHybrid/Components/Pages/InterviewList.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/InterviewList.razor
@@ -1,4 +1,5 @@
-﻿@using InterviewGeneratorBlazorHybrid.ViewModels
+﻿@page "/interviews"
+@using InterviewGeneratorBlazorHybrid.ViewModels
 @using InterviewGeneratorBlazorHybrid.Models
 @inject InterviewViewModel ViewModel
 @inject NavigationManager Navigation
