Fixed: Catagory dropdown doesn't populate directly after adding a new category. Now it does.

--- a/InterviewGeneratorBlazorHybrid/Components/Pages/QuestionsPage.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/QuestionsPage.razor
@@ -102,6 +102,13 @@ else
         {
             ViewModel.ChangeCategory(ViewModel.CategoryId);
         }
+
+        ViewModel.LoadCategories();
+    }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        ViewModel.LoadCategories();
     }
 
     private async Task OnCategoryChanged(ChangeEventArgs e)
