--- a/InterviewGeneratorBlazorHybrid/Components/Layout/NavMenu.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Layout/NavMenu.razor
@@ -19,7 +19,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="interview/list">
+            <NavLink class="nav-link" href="interview">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Interview List
             </NavLink>
         </div>
