--- a/InterviewGeneratorBlazorHybrid/Components/Pages/InterviewList.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/InterviewList.razor
@@ -5,6 +5,9 @@
 @inject NavigationManager Navigation
 
 <h3>Interview Listing</h3>
+Edit Mode: @ViewModel.IsEditMode
+Construct Mode: @ViewModel.IsConstructMode
+
 <p><span class="alert-danger">@ErrorMessage</span></p>
 <p><span class="alert-success">@SuccessMessage</span></p>
 <div class="mb-3">
