--- a/InterviewGeneratorBlazorHybrid/Components/Pages/Categories.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/Categories.razor
@@ -64,11 +64,11 @@
                         <td>@cat.Name</td>
                         <td>@cat.Description</td>
                         <td>
-                            <button class="btn btn-sm btn-info me-2" @onclick="() => ViewModel.EditCategory(cat)">Edit</button>
-                            <button class="btn btn-sm btn-danger" @onclick="() => ViewModel.DeleteCategory(cat.Id)">Delete</button>
-                            <NavLink class="btn btn-sm btn-primary" @onclick="() => GoToQuestions(cat.Id)">
-                                Questions
-                            </NavLink>
+                            <div class="d-flex flex-nowrap align-items-center gap-2">
+                                <button class="btn btn-sm btn-info" @onclick="() => ViewModel.EditCategory(cat)">Edit</button>
+                                <button class="btn btn-sm btn-danger" @onclick="() => ViewModel.DeleteCategory(cat.Id)">Delete</button>
+                                <NavLink class="btn btn-sm btn-primary" @onclick="() => GoToQuestions(cat.Id)">Questions</NavLink>
+                            </div>
                         </td>
                     </tr>
                 }
