--- a/InterviewGeneratorBlazorHybrid/Components/Shared/NavButtons.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Shared/NavButtons.razor
@@ -3,7 +3,7 @@
 
 @* Reusable horizontal navigation buttons *@
 @* Responsive navigation: horizontal on large screens, dropdown on small screens *@
-<div class="d-none d-md-flex gap-2 my-3">
+<div class="d-none d-lg-flex gap-2 my-3">
     <NavLink class="btn btn-primary" href="" Match="NavLinkMatch.All">
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
     </NavLink>
@@ -23,7 +23,7 @@
     </NavLink>
 </div>
 
-<div class="d-flex d-md-none my-3">
+<div class="d-flex d-lg-none my-3">
     <div class="dropdown w-100">
         <button class="btn btn-primary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Menu
